--- a/sfg-petclinic/pom.xml
+++ b/sfg-petclinic/pom.xml
@@ -26,16 +26,24 @@
 		<module>pet-clinic-data</module>
 	</modules>
 
-	<dependencies>
-
-
-	</dependencies>
+	<scm>
+		<connection>scm:git:https://github.com/Yuvraj2300/sfg_pet_clinic</connection>
+		<developerConnection>scm:git:https://github.com/Yuvraj2300/sfg_pet_clinic</developerConnection>
+		<url>https://github.com/Yuvraj2300/sfg_pet_clinic</url>
+	</scm>
 
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals>install</goals>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
