--- a/sfg-petclinic/pom.xml
+++ b/sfg-petclinic/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -25,11 +27,8 @@
 	</modules>
 
 	<scm>
-		<connection>scm:git:https://github.com/Yuvraj2300/sfg_pet_clinic</connection>
-		<developerConnection>scm:git:https://github.com/Yuvraj2300/sfg_pet_clinic</developerConnection>
-		<url>https://github.com/Yuvraj2300/sfg_pet_clinic</url>
-	  <tag>SNAPSHOT-0.0.2</tag>
-  </scm>
+		<developerConnection>scm:git:git@github.com:Yuvraj2300/sfg_pet_clinic.git</developerConnection>
+	</scm>
 
 	<build>
 		<plugins>
