--- a/sfg-petclinic/release.properties
+++ b/sfg-petclinic/release.properties
@@ -1,11 +1,24 @@
 #release configuration
-#Mon Jan 25 13:50:17 IST 2021
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-pushChanges=true
-scm.url=scm\:git\:https\://github.com/Yuvraj2300/sfg_pet_clinic
-preparationGoals=clean verify
-projectVersionPolicyId=default
-remoteTagging=true
+#Mon Jan 25 13:57:09 IST 2021
 scm.commentPrefix=[maven-release-plugin] 
+project.dev.com.udm\:sfg-pet-clinic=0.0.3-SNAPSHOT
+pushChanges=true
+scm.tag=SNAPSHOT-0.0.2
+remoteTagging=true
+project.scm.com.udm\:pet-clinic-web.empty=true
+project.scm.com.udm\:sfg-pet-clinic.tag=HEAD
+project.rel.com.udm\:pet-clinic-data=0.0.2
+projectVersionPolicyId=default
+scm.url=scm\:git\:https\://github.com/Yuvraj2300/sfg_pet_clinic
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.rel.com.udm\:sfg-pet-clinic=0.0.2
+project.scm.com.udm\:sfg-pet-clinic.developerConnection=scm\:git\:https\://github.com/Yuvraj2300/sfg_pet_clinic
+preparationGoals=clean verify
+project.scm.com.udm\:sfg-pet-clinic.url=https\://github.com/Yuvraj2300/sfg_pet_clinic
+project.scm.com.udm\:sfg-pet-clinic.connection=scm\:git\:https\://github.com/Yuvraj2300/sfg_pet_clinic
+project.scm.com.udm\:pet-clinic-data.empty=true
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.dev.com.udm\:pet-clinic-data=0.0.3-SNAPSHOT
+project.rel.com.udm\:pet-clinic-web=0.0.2
+project.dev.com.udm\:pet-clinic-web=0.0.3-SNAPSHOT
+completedPhase=run-preparation-goals
