--- a/sfg-petclinic/pet-clinic-data/pom.xml
+++ b/sfg-petclinic/pet-clinic-data/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.udm</groupId>
 		<artifactId>sfg-pet-clinic</artifactId>
-		<version>0.0.3-SNAPSHOT</version>
+		<version>0.0.3</version>
 	</parent>
 
 	<groupId>com.udm</groupId>
