--- a/sfg-petclinic/pet-clinic-web/pom.xml
+++ b/sfg-petclinic/pet-clinic-web/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.udm</groupId>
 		<artifactId>sfg-pet-clinic</artifactId>
-		<version>0.0.3-SNAPSHOT</version>
+		<version>0.0.3</version>
 	</parent>
 	<groupId>com.udm</groupId>
 	<artifactId>pet-clinic-web</artifactId>
