--- a/sfg-petclinic/pet-clinic-web/pom.xml
+++ b/sfg-petclinic/pet-clinic-web/pom.xml
@@ -42,6 +42,11 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -91,42 +96,42 @@
 	</dependencies>
 
 	<build>
-	<!-- 	<pluginManagement> -->
-			<plugins>
-				<plugin>
-					<groupId>ro.isdc.wro4j</groupId>
-					<artifactId>wro4j-maven-plugin</artifactId>
-					<version>${wro4j.version}</version>
-					<executions>
-						<execution>
-							<phase>generate-resources</phase>
-							<goals>
-								<goal>run</goal>
-							</goals>
-						</execution>
-					</executions>
-					<configuration>
-						<wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
-						<cssDestinationFolder>${project.build.directory}/classes/static/resources/css</cssDestinationFolder>
-						<wroFile>${basedir}/src/main/wro/wro.xml</wroFile>
-						<extraConfigFile>${basedir}/src/main/wro/wro.properties</extraConfigFile>
-						<contextFolder>${basedir}/src/main/less</contextFolder>
-					</configuration>
-					<dependencies>
-						<dependency>
-							<groupId>org.webjars</groupId>
-							<artifactId>bootstrap</artifactId>
-							<version>${webjars-bootstrap.version}</version>
-						</dependency>
-						<dependency>
-							<groupId>org.mockito</groupId>
-							<artifactId>mockito-core</artifactId>
-							<version>${mockito.version}</version>
-						</dependency>
-					</dependencies>
-				</plugin>
-			</plugins>
-	<!-- 	</pluginManagement> -->
+		<!-- <pluginManagement> -->
+		<plugins>
+			<plugin>
+				<groupId>ro.isdc.wro4j</groupId>
+				<artifactId>wro4j-maven-plugin</artifactId>
+				<version>${wro4j.version}</version>
+				<executions>
+					<execution>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
+					<cssDestinationFolder>${project.build.directory}/classes/static/resources/css</cssDestinationFolder>
+					<wroFile>${basedir}/src/main/wro/wro.xml</wroFile>
+					<extraConfigFile>${basedir}/src/main/wro/wro.properties</extraConfigFile>
+					<contextFolder>${basedir}/src/main/less</contextFolder>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.webjars</groupId>
+						<artifactId>bootstrap</artifactId>
+						<version>${webjars-bootstrap.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.mockito</groupId>
+						<artifactId>mockito-core</artifactId>
+						<version>${mockito.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+		</plugins>
+		<!-- </pluginManagement> -->
 	</build>
 
 </project>
